--- a/site/templates/navigation.html
+++ b/site/templates/navigation.html
@@ -10,8 +10,7 @@
         <a class="navbar-brand" href="#">Remminder REST</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"
-                                    ng-controller="AuthorController as author">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right" ng-show="author.isAuth">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"
