--- a/site/templates/anonymous/registration.html
+++ b/site/templates/anonymous/registration.html
@@ -35,5 +35,6 @@
             </div>
         </div>
         <a href ng-click="author.test('test');" type="submit" class="btn btn-block form-btn">Confirm identity</a>
+        <a href ng-click="author.logout();" type="submit" class="btn btn-block form-btn">Log Out</a>
     </form>
 </div>
