--- a/site/templates/navigation.html
+++ b/site/templates/navigation.html
@@ -16,7 +16,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                     role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-user"></span>
-                    Vorobiov <span class="caret"></span>
+                    {{author.user.name | upperFirstLetter}} <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Notes</a></li>
@@ -24,7 +24,7 @@
                     <li><a href="#">Tags</a></li>
                     <li><a href="#">Images</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Logout</a></li>
+                    <li><a href ng-click="author.logout();">Logout</a></li>
                 </ul>
             </li>
         </ul>
