--- a/site/css/style.css
+++ b/site/css/style.css
@@ -8,6 +8,12 @@
     src: url(../fonts/minus/minus.TTF);
 }
 
+.error {
+    color: rgb(255, 0, 0);
+    text-align: center;
+    font-family: Roboto, sans-serif;
+}
+
 .rem-nav {
     margin-bottom: 30px;
 }
@@ -51,4 +57,12 @@
     -ms-transform: rotate(1deg);
     -o-transform: rotate(1deg);
     transform: rotate(1deg);
+}
+
+.loginForm .ng-invalid.ng-dirty {
+    background-color: rgba(255, 182, 193, 0.1);
+}
+
+.loginForm .ng-valid.ng-dirty {
+    background-color: rgba(144, 238, 144, 0.1);
 }
